--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
          <!-- Start Of Bio note -->
     
         <h1>Senait Ghirmay</h1>
-        <h2>Getting to know eachother</h2>
+        <h2>Getting to know each other</h2>
         <div class="image">
-            <img src="./images/square_profile.jpg" alt="Photograph Of Myself">
+            <img src="./image_of_sen.jpg" alt="Photograph Of Myself">
         </div>   
        
         <p>
